COMP: Do not use C++ style comments for Doxygen cond.

For the \cond and \endcond commands, it is recommended to use C-style comments
to avoid issues in Doxygen:

  https://bugzilla.gnome.org/show_bug.cgi?id=721032

Change-Id: I0758ed2d4ad34b334cddc72a641115abd50cfd2c
Suggested-by: Luc Hermitte <luc.hermitte@c-s.fr>