Modules/Filtering/MathematicalMorphology/include/itkMorphologyHistogram.h
@@ -190,7 +190,7 @@ public:
   TInputPixel                     m_Boundary;
 };
 
-/** \cond HIDE_SPECIALIZATION_DOCUMENTATION */
+/// \cond HIDE_SPECIALIZATION_DOCUMENTATION
 
 // now create MorphologyHistogram partial specilizations using the VectorMorphologyHistogram
 // as base class
@@ -213,7 +213,7 @@ class MorphologyHistogram<bool, TCompare>:
 {
 };
 
-/** \endcond */
+/// \endcond
 
 } // end namespace Function
 } // end namespace itk
